--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "description": "",
   "dependencies": {
     "body-parser": "^2.1.0",
+    "dotenv": "^16.5.0",
     "express": "^5.0.1",
     "mongoose": "^8.12.1",
+    "nodemon": "^3.1.10",
     "svix": "^1.61.3"
   }
 }
