--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,13 @@
     "version": 2,
     "name": "BuoyantPysche",
     "builds": [
-       { "src": "index.js", "use": "@vercel/node" }
+      { "src": "index.js", "use": "@vercel/node" }
+    ],
+    "includeFiles": [
+      "lib/**"
     ],
     "routes": [
-       { "src": "/(.*)", "dest": "/index.js" }
+      { "src": "/(.*)", "dest": "/index.js" }
     ]
-}
+  }
+  
