--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "body-parser": "^2.1.0",
+    "clerk": "^0.8.3",
     "dotenv": "^16.5.0",
     "express": "^5.0.1",
     "mongoose": "^8.12.1",
