--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/express": "^1.7.0",
     "body-parser": "^2.1.0",
     "clerk": "^0.8.3",
     "dotenv": "^16.5.0",
