--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@clerk/express": "^1.7.0",
     "body-parser": "^2.1.0",
     "clerk": "^0.8.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.0.1",
+    "imagekit": "^6.0.0",
     "mongoose": "^8.12.1",
     "nodemon": "^3.1.10",
     "svix": "^1.61.3"
